color contrast fixed

--- a/styles/base.css
+++ b/styles/base.css
@@ -32,7 +32,7 @@ header span{
   text-align: start;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   background-color: #8da242;
-  color:#ffffff ;
+  color:#000000 ;
   font-size: 20px;
   font-weight: bold;
 }
@@ -54,6 +54,9 @@ header span{
 }
 
 /*navigation style*/
+.nav-bar a{
+  color: #000000;
+}
 .nav-bar{
   display: none;
 }
