--- a/styles/larger.css
+++ b/styles/larger.css
@@ -20,7 +20,7 @@
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: #8da242;
-    color: #ffffff;
+    color: #000000;
     font-size: 40px;
     font-weight: bold;
   }
@@ -36,7 +36,9 @@
   }
 
   /*navigation style*/
-
+  .nav-bar a{
+    color: #000000;
+  }
   .nav-bar{
     display: block;
   }
